src/objects/ssv4__deployStep__c.object
<CustomObject>
    <customHelpPage>ssv4__help</customHelpPage>
    <description>Deployment steps such as Script, Delete metadata, Import Data</description>
    <fields>
        <fullName>ssv4__Order__c</fullName>
        <inlineHelpText>Index of order execution</inlineHelpText>
        <label>Order</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssv4__Script__c</fullName>
        <inlineHelpText>Apex Script</inlineHelpText>
        <label>Script</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ssv4__deployPlan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Deployment Plan</label>
        <referenceTo>ssv4__deployPlan__c</referenceTo>
        <relationshipLabel>Deployment Steps</relationshipLabel>
        <relationshipName>deploySteps</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Deployment Step</label>
    <nameField>
        <displayFormat>DS-{000000}</displayFormat>
        <label>Deployment Step Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Deployment Steps</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>